# PhotoPrune

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  release.yml  test.yml
docs/: json-schema.md
photodedupe/: cli.py  embedder.py  hasher.py  indexer.py  models.py  reporter.py  scanner.py
photoprune/: __init__.py  cleaner.py  cli.py  models.py  output.py  pipeline.py  reporter.py  scanner.py
tests/: conftest.py  test_cleaner.py  test_hasher.py  test_indexer.py  test_output.py  test_pipeline.py  test_reporter.py  test_scanner.py
